--- a/crud.html
+++ b/crud.html
@@ -179,30 +179,47 @@
   </div>
 
   <!-- Modale Marques -->
-  <div id="brandModal" class="img-edit-modal" style="display:none; position:fixed; inset:0; background:rgba(0,0,0,.6); z-index:1002; align-items:center; justify-content:center;">
-    <div class="img-edit-modal-content" style="background:#fff; padding:12px; border-radius:8px; max-width:520px; width:90%; display:grid; gap:10px; position:relative;">
-      <button class="close" onclick="closeBrandModal()" style="position:absolute; top:12px; right:12px;">✖</button>
-      <h3 style="margin:0">Nouvelle marque</h3>
+<!-- Modale Marques -->
+<div id="brandModal" class="img-edit-modal" style="display:none;">
+  <div class="img-edit-modal-content">
+    <button class="close" onclick="closeBrandModal()">✖</button>
+    <h3 style="margin:0">Marques</h3>
 
-      <form id="formBrand">
-        <div class="mb-2">
-          <label>Nom de la marque</label>
-          <input type="text" name="brand_name" placeholder="Ex: Omega" required>
-        </div>
+    <!-- 👉👉 CE TABLEAU DOIT EXISTER 👇 -->
+    <table style="width:100%; border-collapse:collapse;">
+      <thead>
+        <tr>
+          <th style="text-align:left; padding:6px; border-bottom:1px solid #ddd;">Logo</th>
+          <th style="text-align:left; padding:6px; border-bottom:1px solid #ddd;">Nom</th>
+          <th style="text-align:left; padding:6px; border-bottom:1px solid #ddd;">Actions</th>
+        </tr>
+      </thead>
+      <tbody id="brandTable"></tbody>
+    </table>
+    <!-- 👆👆 -->
 
-        <div class="mb-2">
-          <label>Logo (PNG/JPG/WebP)</label>
-          <input type="file" id="brandLogoInput" accept="image/*">
-          <div id="brandLogoPreview" class="mt-2"></div>
-        </div>
+    <hr style="border:none; border-top:1px solid #eee">
 
-        <div style="display:flex; gap:8px;">
-          <button type="submit">Enregistrer</button>
-          <button type="button" onclick="closeBrandModal()">Annuler</button>
-        </div>
-      </form>
-    </div>
+    <form id="formBrand">
+      <input type="hidden" name="brand_id">
+      <div>
+        <label>Nom de la marque</label>
+        <input type="text" name="brand_name" placeholder="Ex: Omega" required>
+      </div>
+      <div>
+        <label>Logo (PNG/JPG/WebP)</label>
+        <input type="file" id="brandLogoInput" accept="image/*">
+        <div id="brandLogoPreview" style="margin-top:8px;"></div>
+      </div>
+      <div style="display:flex; gap:8px; align-items:center;">
+        <button type="submit">💾 Enregistrer</button>
+        <button type="button" onclick="resetBrandForm()">↺ Nouvelle marque</button>
+        <button type="button" onclick="closeBrandModal()">Annuler</button>
+      </div>
+    </form>
   </div>
+</div>
+
 
   <style>@keyframes spin { to { transform: rotate(360deg); } }</style>
 </body>
