logo site et favicon ok ajout champs prix conseille reste mise en page et conversion cfa

--- a/crud.html
+++ b/crud.html
@@ -53,6 +53,8 @@
       <col style="width:10%">
       <col style="width:7%">
       <col style="width:7%">
+      <col style="width:7%"> <!-- Prix conseillé -->
+      <col style="width:6%"> <!-- Ajust % -->
       <col style="width:12%">
       <col style="width:16%">
       <col style="width:18%">
@@ -67,6 +69,7 @@
         <th>Reference</th>
         <th>Marque</th>
         <th>Nom</th>
+        <th>Prix conseillé</th>
         <th>Prix</th>
         <th>Promotion</th>
         <th>Courte description</th>
@@ -132,6 +135,10 @@
 
       <label>Prix :
         <input type="number" name="prix" required>
+      </label>
+
+      <label>Prix conseillé :
+        <input type="number" name="prix_conseille" required>
       </label>
 
       <label>Promotion :
