--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8" />
-  <title>Les Montres de Gotin</title>
+  <title>Le fouineur...</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-
+<link rel="manifest" href="manifest.webmanifest">
+<meta name="theme-color" content="#FFD700">
   <!-- Police + Styles -->
   <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@400;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles/style.css">
@@ -16,9 +17,14 @@
   <script src="js/script.js" defer></script>
 </head>
 
+<link rel="icon" type="image/png" href="images/logo-site2.png">
+
 <body>
   <div class="container">
-    <h1>Les Montres de Gotin</h1>
+    <div class="site-title" style="display: flex; align-items: center;">
+      <img src="images/logo-site2.png" alt="Logo du site" class="logo" style="height: 48px; margin-right: 12px; background: #fff; border-radius: 100%;" />
+      <h1 style="margin: 0;">Le fouineur...</h1>
+    </div>
 
     <div class="main-layout">
       <!-- COLONNE GAUCHE : Filtres -->
@@ -64,7 +70,8 @@
       <p>
         Pour tout renseignement :
         <a href="mailto:robic@gmail.com">robic@gmail.com</a> —
-        <a href="tel:+33326156546">+33 3 26 15 65 46</a>
+        <a href="tel:+33326156546">+33 3 26 15 65 46</a> —
+        <a href="https://lefouineur.latelier22.fr" target="_blank">lefouineur.latelier22.fr</a>
       </p>
     </footer>
   </div>
