--- a/tempate_index_base.html
+++ b/tempate_index_base.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Les Montres de Gotin</title>
+  <title>Le fouineur...</title>
   <style>
     /* CSS identique à celui généré dans le script précédent (très complet) */
   </style>
 </head>
 <body>
   <div class="container">
-    <h1 style="text-align:center; font-size:2.5em; margin-bottom:30px; color:#FFD700;">Les Montres de Gotin</h1>
+    <h1 style="text-align:center; font-size:2.5em; margin-bottom:30px; color:#FFD700;">Le fouineur...</h1>
     <div id="montres-container"></div>
     <div class="thumbnail-strip" id="thumbnail-strip"></div>
     <div class="navigation">
